src/test/ui/mir-dataflow/indirect-mutation-offset.stderr
error: rustc_peek: bit not set
  --> $DIR/indirect-mutation-offset.rs:41:14
   |
LL |     unsafe { rustc_peek(x) };
   |              ^^^^^^^^^^^^^

error: stop_after_dataflow ended compilation

error: aborting due to 2 previous errors

